--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -4,7 +4,7 @@
     		<header>
 			<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top mb-5">
 
-				<a class="navbar-brand animate__flash animate__animated animate__delay-5s" href="#">
+				<a class="navbar-brand animate__flash animate__animated animate__delay-5s" href="{{path('home_page')}}">
                     Transpoteur
                 </a>
 
@@ -58,7 +58,7 @@
 							<div class="dropdown-menu dropdown-menu-right">
 								<a class="dropdown-item" href="#">Mon Profil</a>
 								<a class="dropdown-item" href="#"><i class="fa fa-pen"></i>Commander une course</a>
-								<a class="dropdown-item" href="#">Dashboard</a>
+								<a class="dropdown-item" href="{{path('app_user_index')}}">Dashboard</a>
 								<div class="dropdown-divider"></div>
 								<a class="dropdown-item" href="{{path('app_logout')}}">Déconnexion</a>
 							</div>
