--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -29,7 +29,7 @@
 							</a>
 						</li>
 						<li class="nav-item">
-								<a class="nav-link animate__flash animate__animated animate__delay-5s" href="/"><i class="fa fa-pen"></i>Réservation</a>
+								<a class="nav-link animate__flash animate__animated animate__delay-5s" href="{{path('app_order_index')}}"><i class="fa fa-pen"></i>Réservation</a>
 						</li>
 
                     </ul>
