--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,7 +24,10 @@
 	<body>
 		{% include "partials/header.html.twig" %}
 
-		{% block body %}{% endblock %}
+		{% block body %}
+		
+	
+		{% endblock %}
 		{% include "partials/footer.html.twig" %}
 
 		{% include "partials/scripts.html.twig" %}
