+ routage app_index

--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -44,7 +44,7 @@
                                {{ app.user.lastname }}
                             </a>
 							<div class="dropdown-menu dropdown-menu-right">
-								<a class="dropdown-item" href="#">Dashboard Admin</a>
+								<a class="dropdown-item" href="{{path('app_order_index')}}">Dashboard Admin</a>
 								<div class="dropdown-divider"></div>
 								<a class="dropdown-item" href="{{path('app_logout')}}">Déconnexion</a>
 							</div>
