--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -44,7 +44,7 @@
                                {{ app.user.lastname }}
                             </a>
 							<div class="dropdown-menu dropdown-menu-right">
-								<a class="dropdown-item" href="{{path('app_order_index')}}">Dashboard Admin</a>
+								<a class="dropdown-item" href="{{path('admin')}}">Dashboard Admin</a>
 								<div class="dropdown-divider"></div>
 								<a class="dropdown-item" href="{{path('app_logout')}}">Déconnexion</a>
 							</div>
@@ -57,8 +57,8 @@
                             </a>
 							<div class="dropdown-menu dropdown-menu-right">
 								<a class="dropdown-item" href="#">Mon Profil</a>
-								<a class="dropdown-item" href="{{path('app_order_new')}}"><i class="fa fa-pen"></i>Commander une course</a>
-								<a class="dropdown-item" href="{{path('app_user_index')}}">Dashboard</a>
+								<a class="dropdown-item" href="#"><i class="fa fa-pen"></i>Commander une course</a>
+								<a class="dropdown-item" href="{{path('app_user_index')}}">Dashboard User</a>
 								<div class="dropdown-divider"></div>
 								<a class="dropdown-item" href="{{path('app_logout')}}">Déconnexion</a>
 							</div>
@@ -80,15 +80,15 @@
 				</div>
 			</nav>
 		</header>
-		{% for label, messages in app.flashes %}
-	<div class="container my-5">
+		{# {% for label, messages in app.flashes %} #}
+	{# <div class="container my-5">
 		{% for message in messages %}
 			<div class="alert alert-{{ label }}">
 				{{ message | raw }}
 			</div>
 		{% endfor %}
-	</div>
-{% endfor %}
+	</div> #}
+{# {% endfor %} #}
 
 
 
