MAJ security.yaml
bloquage route USER

--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -80,15 +80,15 @@
 				</div>
 			</nav>
 		</header>
-		{# {% for label, messages in app.flashes %} #}
-	{# <div class="container my-5">
+		{# {% for label, messages in app.flashes %}
+	<div class="container my-5">
 		{% for message in messages %}
 			<div class="alert alert-{{ label }}">
 				{{ message | raw }}
 			</div>
 		{% endfor %}
-	</div> #}
-{# {% endfor %} #}
+	</div>
+{% endfor %} #}
 
 
 
