--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -58,7 +58,7 @@
 							<div class="dropdown-menu dropdown-menu-right">
 								<a class="dropdown-item" href="#">Mon Profil</a>
 								<a class="dropdown-item" href="#"><i class="fa fa-pen"></i>Commander une course</a>
-								<a class="dropdown-item" href="{{path('app_user_index')}}">Dashboard User</a>
+								<a class="dropdown-item" href="{{path('show_user')}}">Mon profile</a>
 								<div class="dropdown-divider"></div>
 								<a class="dropdown-item" href="{{path('app_logout')}}">Déconnexion</a>
 							</div>
