--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -59,6 +59,8 @@
 								<a class="dropdown-item" href="#">Mon Profil</a>
 								<a class="dropdown-item" href="#"><i class="fa fa-pen"></i>Commander une course</a>
 								<a class="dropdown-item" href="{{path('show_user')}}">Mon profile</a>
+								<a class="dropdown-item" href="{{path('show_order')}}">Mes commandes</a>
+
 								<div class="dropdown-divider"></div>
 								<a class="dropdown-item" href="{{path('app_logout')}}">Déconnexion</a>
 							</div>
