--- a/templates/order/show.html.twig
+++ b/templates/order/show.html.twig
@@ -32,7 +32,7 @@
 
     <a href="{{ path('app_order_index') }}">back to list</a>
 
-    <a href="{{ path('app_order_edit', {'id': order.id}) }}">edit</a>
+    {# <a href="{{ path('app_order_edit', {'id': order.id}) }}">edit</a> #}
 
-    {{ include('order/_delete_form.html.twig') }}
+    {# {{ include('order/_delete_form.html.twig') }} #}
 {% endblock %}
