--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -1,5 +1,3 @@
-{% set user = ["Profile","Essaouari","admin",true] %}
-
 
     		<header>
 			<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top mb-5">
@@ -23,13 +21,7 @@
 						</li>
 
 						<li class="nav-item">
-							<a class="nav-link animate__flash animate__animated animate__delay-5s" href="{{path('app_register')}}">
-                                <i class="fa fa-newspaper"></i>
-                                Inscription
-							</a>
-						</li>
-						<li class="nav-item">
-								<a class="nav-link animate__flash animate__animated animate__delay-5s" href="{{path('app_order_index')}}"><i class="fa fa-pen"></i>Réservation</a>
+								<a class="nav-link animate__flash animate__animated animate__delay-5s" href="{{path('app_order_new')}}"><i class="fa fa-car"></i> Commander une course</a>
 						</li>
 
                     </ul>
@@ -56,8 +48,7 @@
                                 {{ app.user.lastname }}
                             </a>
 							<div class="dropdown-menu dropdown-menu-right">
-								<a class="dropdown-item" href="#">Mon Profil</a>
-								<a class="dropdown-item" href="#"><i class="fa fa-pen"></i>Commander une course</a>
+								<a class="dropdown-item" href="{{path('app_order_new')}}"><i class="fa fa-car"></i> Commander une course</a>
 								<a class="dropdown-item" href="{{path('show_user')}}">Mon profile</a>
 								<a class="dropdown-item" href="{{path('show_order')}}">Mes commandes</a>
 								<div class="dropdown-divider"></div>
