--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,15 +1,25 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Page inscription des utilisateurs 
+{% endblock %}
 
 {% block body %}
-    <h1>Register</h1>
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
+<br><br>
+	
+		<div class="container my-5 w-25 bg-dark border  text-center text-white ">
+			<h1 class="container my-5 ">Inscrivez-vous !
+			</h1>
+			{{ form_start(registrationForm) }}
+			{{ form_row(registrationForm.firstname,  {'attr':{'class':'form form-control'}}) }}
+			{{ form_row(registrationForm.lastname,  {'attr':{'class':'form form-control'}}) }}
+			{{ form_row(registrationForm.email,  {'attr':{'class':'form form-control'}}) }}		
+			{{ form_row(registrationForm.adresse,  {'attr':{'class':'form form-control'}}) }}
+			{{ form_row(registrationForm.age,  {'attr':{'class':'form form-control'}}) }}
+			{{ form_row(registrationForm.plainPassword,   {'attr':{'class':'form form-control'}})
+			        }}
 
-        <button type="submit" class="btn">Register</button>
-    {{ form_end(registrationForm) }}
+			<button type="submit" class="btn btn-success btn-block p-2 my-5">S'inscrire</button>
+			{{ form_end(registrationForm) }}
+		</div>
+
 {% endblock %}
