+Création formulaire de contact+Dashboard pour Contact
J'ai mis en place le formulaire de contact de nos users au quelqu'un vient sur le site même pas inscrit peut au moins nous envoyer un mail pour des renseignements. Ce formulaire peut aussi nous servir comme route pour l'envoie des mails pour la confirmation de commandes clients ou de leurs refus. J'ai fait le Dashboard de ce dernier. => Voir plus .....""Code. Daouda

--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -19,6 +19,12 @@
                                 Accueil
 							</a>
 						</li>
+							<li class="nav-item">
+							<a class="nav-link animate__flash animate__animated animate__delay-5s" href="{{path('app_contact')}}">
+                                <i class="fa fa-envelope"></i>
+                                Contact
+							</a>
+						</li>
 
 						<li class="nav-item">
 								<a class="nav-link animate__flash animate__animated animate__delay-5s" href="{{path('app_order_new')}}"><i class="fa fa-car"></i> Commander une course</a>
