+Ajout étapes de configuration réception mail dontact sur mailtrap

--- a/templates/order/_form.html.twig
+++ b/templates/order/_form.html.twig
@@ -8,6 +8,6 @@
     {{ form_row(form.destination,   {'attr':{'class':'form form-control'}}) }}
     {{ form_row(form.date_reservation,   {'attr':{'class':'form form-control d-flex'}}) }}
   
-    <button class="btn btn-success btn-block p-3 my-1">{{ button_label|default('Enregistrer') }}</button>
+    <button class="btn btn-success btn-block p-3 my-1 bold">{{ button_label|default('Enregistrer') }}</button>
 {{ form_end(form) }}
 </div>
