--- a/templates/order/show.html.twig
+++ b/templates/order/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Order{% endblock %}
+{% block title %}Les réservations | Order{% endblock %}
 
 {% block body %}
     <h1>Order</h1>
