--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,10 +1,35 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Page Accueil | Home {% endblock %}
+{% block title %}Page Accueil | Home
+{% endblock %}
 
 {% block body %}
 
+	{# ------image Background slider #}
+	<div class="bd-example">
+	  <div id="carouselExampleCaptions" class="carousel slide pointer-event" data-ride="carousel">
+	    <div class="carousel-inner" role="listbox">
+	      <div class="carousel-item active">
+	        <img class="d-block w-100" data-src="holder.js/900x300?auto=yes&amp;bg=777&amp;fg=555&amp;text=First slide" alt="First slide [900x300]" src="assets/images/FOND900_800.png" data-holder-rendered="true">
+	        <div class="carousel-caption d-none d-md-block">
+	        </div>
+	      </div>
+	      <div class="carousel-item">
+	        <img class="d-block w-100" data-src="holder.js/900x300?auto=yes&amp;bg=666&amp;fg=444&amp;text=Second slide" alt="Second slide [900x300]" src="assets/images/FOND900_800_2.png" data-holder-rendered="true">
+	        <div class="carousel-caption d-none d-md-block">
+	        </div>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+		{# <div style=" background-attachment: fixed, scroll; background-image: url('assets/images/network-4894813_1920.jpg');
+			        min-height: 350px;
+			        text-decoration: none;"> <div style="background: #300130;
+				background: -moz-linear-gradient(top, #300130 0%, #000000 100%);
+				background: -webkit-linear-gradient(top, #300130 0%, #000000 100%);
+				background: linear-gradient(to bottom, #300130 0%, #000000 100%);
+				filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#300130', endColorstr='#000000',GradientType=0 );">
+			<section class="banniere d-flex flex-column" style="min-height:800px;">
+					</section> #}
 
-
-
-{% endblock %}
+				{% endblock %}
