--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,7 +26,7 @@
 			{{ encore_entry_script_tags('app') }}
 		{% endblock %}
 	</head>
-	<body class="container">
+	<body>
 		{% include "partials/header.html.twig" %}
 
 		{% block body %}{% endblock %}
