--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -19,6 +19,11 @@
 	        <div class="carousel-caption d-none d-md-block">
 	        </div>
 	      </div>
+		   <div class="carousel-item">
+	        <img class="d-block w-100" data-src="holder.js/900x300?auto=yes&amp;bg=666&amp;fg=444&amp;text=Second slide" alt="Second slide [900x300]" src="assets/images/chauffeur-prive2.webp" data-holder-rendered="true">
+	        <div class="carousel-caption d-none d-md-block">
+	        </div>
+	      </div>
 	    </div>
 	  </div>
 	</div>
