MAJ image background slider niveau lumiere

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -10,7 +10,7 @@
 	  <div id="carouselExampleCaptions" class="carousel slide pointer-event" data-ride="carousel">
 	    <div class="carousel-inner" role="listbox">
 	      <div class="carousel-item active">
-	        <img class="d-block w-100" data-src="holder.js/900x300?auto=yes&amp;bg=777&amp;fg=555&amp;text=First slide" alt="First slide [900x300]" src="assets/images/FOND900_800.jpg" data-holder-rendered="true">
+	        <img class="d-block w-100" data-src="holder.js/900x300?auto=yes&amp;bg=777&amp;fg=555&amp;text=First slide" alt="First slide [900x300]" src="assets/images/FOND900_800.png" data-holder-rendered="true">
 	        <div class="carousel-caption d-none d-md-block">
 	        </div>
 	      </div>
