--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -37,4 +37,19 @@
 			<section class="banniere d-flex flex-column" style="min-height:800px;">
 					</section> #}
 
+					{# -------card bianniere---------- #}
+<div style=" top: 0; heigth:650px; z-index: 99;" class="w-100 position-absolute d-flex justify-content-center p-5">
+
+<div class="card mt-5">
+  <div class="card-header">
+    Featured
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">Special title treatment</h5>
+    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+
+</div>
 				{% endblock %}
