MAJ card principal

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -40,13 +40,13 @@
 					{# -------card bianniere---------- #}
 <div style=" top: 0; heigth:650px; z-index: 99;" class="w-100 position-absolute d-flex justify-content-center p-5">
 
-<div class="card mt-5">
+<div class="card mt-5 w-50">
   <div class="card-header">
     Featured
   </div>
-  <div class="card-body">
+  <div class="card-body text-center">
     <h5 class="card-title">Special title treatment</h5>
-    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+    <p class="card-text">With supporting text .</p>
     <a href="#" class="btn btn-primary">Go somewhere</a>
   </div>
 </div>
