--- a/templates/order/new.html.twig
+++ b/templates/order/new.html.twig
@@ -3,8 +3,10 @@
 {% block title %}New Order{% endblock %}
 
 {% block body %}
-
+<div class="container">
     {{ include('order/_form.html.twig') }}
+
+</div>
 
     <a href="{{ path('app_order_index') }}">back to list</a>
 {% endblock %}
