MAJ vue profile et order

--- a/templates/user/order.user.html.twig
+++ b/templates/user/order.user.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-    <table class="table">
+    <table class="table mt-5">
         <thead>
             <tr>
                 <th>Identifiants </th>
