--- a/templates/user/profil.user.html.twig
+++ b/templates/user/profil.user.html.twig
@@ -3,8 +3,8 @@
 {% block title %}User index{% endblock %}
 
 {% block body %}
-
-    <table class="table">
+<div class="container">
+    <table class="table mt-5">
         <thead>
             <tr>
                 {# <th>Id</th> #}
@@ -35,5 +35,6 @@
 
         </tbody>
     </table>
+</div>
 
 {% endblock %}
