--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -38,9 +38,9 @@
 			</div>
 
 
-			<button class="btn btn-lg btn-primary btn-block" type="submit">
-				Sign in
+			<button class="btn btn-lg btn-success btn-block" type="submit">
+				Se connecter
 			</button>
-		</form>*
+		</form>
 	</div>
 {% endblock %}
