--- a/public/assets/css/master.css
+++ b/public/assets/css/master.css
@@ -1,5 +1,5 @@
 
-/* .container, .container-sm, .container-md {
-    max-width: 100% !important;
-    background-color: rgb(106, 184, 38); 
-} */
+
+#mt-6{
+margin-top: 60px;
+}
