--- a/templates/order/_form.html.twig
+++ b/templates/order/_form.html.twig
@@ -1,7 +1,7 @@
 <div class="container">
 {{ form_start(form) }}
 
-    <label class="bg-dark text-center text-white mt-5">Adresse de départ</label>
+    <label class="text-center text-white mt-5">Adresse de départ</label>
     {{ form_widget(form.depart,   {'attr':{'class':'form form-control'}}) }}
     {{ form_row(form.destination,   {'attr':{'class':'form form-control'}}) }}
     {{ form_row(form.date_reservation, ) }}
