--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -77,7 +77,7 @@
             Menu
           </h6>
           <p>
-            <a href="#" class="text-reset"><span class=" text-white">Enregistrement</span> </a>
+            <a href="{{path('mentions_legales')}}" class="text-reset"><span class=" text-white">Mentions legales</span> </a>
           </p>
           <p>
             <a href="#" class="text-reset"><span class=" text-white">Connexion</span></a>
