--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -1,4 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+	<div class="container">
 	<a class="navbar-brand  text-white" href="#">Izy Drive</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
@@ -69,6 +70,7 @@
 
 						</li>
 					</ul>
+	</div>
 
 	</div>
 </nav>
