--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light fixed-top">
+<header class="navbar navbar-expand-lg navbar-light fixed-top">
 	<div class="container">
 	<a class="navbar-brand  text-white" href="#">Izy Drive</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -73,4 +73,4 @@
 	</div>
 
 	</div>
-</nav>
+</header>
