--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -45,11 +45,14 @@
 		{% endblock %}
 	</head>
 	<body>
+	<header>
 		{% include "partials/header.html.twig" %}
+</header>
 
-		{% block body %}{% endblock %}
+		{% block body %} <main></main>{% endblock %}
+	
 		{% include "partials/footer.html.twig" %}
-
+	
 		{% include "partials/scripts.html.twig" %}
 
 	</body>
