--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -43,10 +43,10 @@
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
           <!-- Content -->
           <h6 class="text-info text-uppercase fw-bold mb-4">
-            <i class="text-info fas fa-gem me-3"></i>PortFolio
+            <i class="text-info fas fa-gem me-3"></i>A votre service
           </h6>
           <p class=" text-white">
-            Ce PortFolio est en mise à jours <br> Je suis à la recherche d'un stage à partir du 20 juin pour une durée de 2 mois ou plus.
+            Ponctualité, Courtoisie, Discrétion, Rigueur et Sécurité, rythment notre façon de faire au quotidien.<br> Bien plus qu'un simple transport, IsyDrive vous offre un service de "conciergerie véhiculée".<br>hors du commun.
           </p>
         </div>
         <!-- Grid column -->
@@ -71,6 +71,7 @@
         </div> -->
         <!-- Grid column -->
         <!-- Grid column -->
+        
         <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
           <!-- Links -->
           <h6 class="text-info text-uppercase fw-bold mb-4">
@@ -80,7 +81,7 @@
             <a href="{{path('mentions_legales')}}" class="text-reset"><span class=" text-white">Mentions legales</span> </a>
           </p>
           <p>
-            <a href="#" class="text-reset"><span class=" text-white">Connexion</span></a>
+            <a href="{{path('app_contact')}}" class="text-reset"><span class=" text-white">Contact</span></a>
           </p>
           <p>
             <a href="#" class="text-reset"><span class=" text-white">Calculateur de charges</span></a>
@@ -96,11 +97,11 @@
           <h6 class="text-info text-uppercase fw-bold mb-4">
             Contact
           </h6>
-          <p class="text-white"><i class="fas fa-home me-3"></i>Bordeaux, France</p>
+          <p class="text-white"><i class="fas fa-home me-3"></i> Marseille, France</p>
           <p>
-            <i class="fas fa-envelope me-3"></i><a href="mailto:soufiane.pro@yahoo.com">soufiane.pro@yahoo.com</a>
+            <i class="fas fa-envelope me-3"></i><a href="mailto:IsyDrive@yahoo.com"> IsyDrive@yahoo.com</a>
           </p>
-          <p><i class="fas fa-phone me-3"></i><a href="tel:+33766224284">0766224284</a></p>
+          <p><i class="fa-solid fa-circle-phone"></i><a href="tel:+33123456789">Portable:0623456789</a></p>
           <!-- <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p> -->
         </div>
         <!-- Grid column -->
