--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,9 +24,10 @@
 		{% endblock %}
 	</head>
 	<body>
+	<header>
 		{% include "partials/header.html.twig" %}
-
-		{% block body %}{% endblock %}
+</header>
+		{% block body %} <main></main>{% endblock %}
 		{% include "partials/footer.html.twig" %}
 
 		{% include "partials/scripts.html.twig" %}
