--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -19,10 +19,14 @@
 					<div class="carousel-caption d-none d-md-block"></div>
 				</div>
 				<div class="carousel-item">
-					<img class="d-block w-100" data-src="holder.js/900x300?auto=yes&amp;bg=666&amp;fg=444&amp;text=Second slide" alt="Second slide [900x300]" src="assets/images/chauffeur-prive2.png" data-holder-rendered="true">
+					<img class="d-block w-100" data-src="holder.js/900x300?auto=yes&amp;bg=666&amp;fg=444&amp;text=Second slide" alt="third slide [900x300]" src="assets/images/chauffeur-prive2.png" data-holder-rendered="true">
 					<div class="carousel-caption d-none d-md-block"></div>
 				</div>
-			</div>
+				
+			</div>	
+	
+
+
 		</div>
 	</div>
 	{# <div style=" background-attachment: fixed, scroll; background-image: url('assets/images/network-4894813_1920.jpg');
@@ -35,23 +39,17 @@
 					<section class="banniere d-flex flex-column" style="min-height:800px;">
 							</section> #}
 
-	{# -------card bianniere---------- #}
-	<div style="margin:0; padding:0; top: 0; heigth:650px; z-index: 99;" class="w-100 position-absolute flex-column pt-5">
 
-		<div style="top: 300px;" class="card mb-5 w-50 m-auto">
-			<div class="card-header">
-				Featured
+		{# -------div invisible de la card bianniere---------- #}
+	<div style="margin:0; padding:0; top: 0; min-heigth:650px; z-index: 99;" class="w-100 position-absolute flex-column pt-5 top-50 start-100">
+	{# -------card bianniere---------- #}
+		<div style="top: 300px" class="card mb-5 p-5 w-50 m-auto  bg-opacity">
+			<div class="card-body text-center ">
+				<h5 class="card-title">"Izy Drive"</h5>
+				<p class="card-text sizetext">Réservez votre course facilement. Grâce à notre expertise, nous vous garantissons un voyage en toute sécurité .</p>
+			
+		
 			</div>
-			<div class="card-body text-center">
-				<h5 class="card-title">Special title treatment</h5>
-				<p class="card-text">With supporting text .</p>
-				<a href="#" class="btn btn-primary">Go somewhere</a>
-			</div>
-		</div>
-		<div style="z-index:200" ; class="wrapper w-100 mt-5">
-			<marquee behavior="alternate">
-				<span class="font-weight-bolder text-info hvr-pulse">Reservez votre chauffeur maintenent !</span>
-			</marquee>
 		</div>
 	</div>
 
