--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,10 +24,10 @@
 		{% endblock %}
 	</head>
 	<body>
-		{% include "partials/header.html.twig" %}
+		{# {% include "partials/header.html.twig" %} #}
 
 		{% block body %}{% endblock %}
-		{% include "partials/footer.html.twig" %}
+		{# {% include "partials/footer.html.twig" %} #}
 
 		{% include "partials/scripts.html.twig" %}
 
