--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -215,7 +215,7 @@
 						</ul>
 					</div> #}
 					<div class="content-section">
-						<div class="content-section-title">Apps in your plan</div>
+						<div class="content-section-title"></div>
 						<div class="apps-card">
 							<div class="app-card">
 								<span>
